syntax = "proto3";

package com.mintter.documents.v1alpha;

import "google/protobuf/timestamp.proto";

option go_package = "mintter/api/go/documents/v1alpha;documents";

message Publication {
  // Output only. Content-addressable version of this publication.
  string version = 1;

  // Output only. The actual document itself.
  Document document = 2;
}

message Document {
  // Output only. Permanent ID of the document.
  string id = 1;

  // Required. Title of the document.
  string title = 2;

  // Required. Subtitle/abstract of the document.
  string subtitle = 3;

  // Output only. ID of the author of the document.
  string author = 4;

  // List of top-level content blocks.
  repeated string children = 5;

  // Lookup map of all the content blocks of this document.
  map<string, Block> blocks = 6;

  // Lookup map of all the links used in this document.
  map<string, Link> links = 7;

  // Output only. Time when first draft of this document was created.
  google.protobuf.Timestamp create_time = 8;

  // Output only. Time when this document was updated.
  google.protobuf.Timestamp update_time = 9;

  // Output only. Only set if this document is already published. Time when this
  // document was published.
  google.protobuf.Timestamp publish_time = 10;
}

message Link {
  // Required. URI this link points to.
  string uri = 1;

  // Optional. Content type for the content this URI points to.
  string content_type = 2;
}

message Block {
  enum ListStyle {
    NONE = 0;

    BULLET = 1;

    NUMBER = 2;
  }

  enum Type {
    TYPE_UNSPECIFIED = 0;

    HEADING = 1;
  }

  // Required. ID of the blocks. Must be unique within the document.
  string id = 1;

  // Required. ID of the parent block. Empty if this is a top-level block. The
  // ID must be present in the blocks map of the document.
  string parent = 2;

  // Required. Type of this block.
  Type type = 3;

  // Required. List of inline elements/spans of this block. This is the actual
  // content of the block.
  repeated InlineElement elements = 4;

  // Optional. Defines which list style must be applied to the children of this
  // block if there's any.
  ListStyle child_list_style = 5;

  // Optional. List of IDs of child content blocks. The ID must be present in
  // the blocks map of the document.
  repeated string children = 6;
}

message InlineElement {
  // Content of the inline element. Union type. Only one can be set.
  oneof content {
    // Text run with support for attributes. If multiple text inline elements
    // have the same attributes, they are expected to be merged together by the
    // client.
    Text text = 1;

    // Multimedia image.
    Image image = 2;

    // Quote from another Mintter document. The content is supposed to be
    // resolved and brought-in by the client.
    Quote quote = 3;
  }
}

message Image {
  // Alt text of the image. Useful for accessibility purposes. Supposed to
  // describe the content of the image with words.
  string alt_text = 1;

  // Key to the link that points to the image. The key must be present in the
  // top-level links map of the document.
  string link_key = 2;
}

message Quote {
  //
  string link_key = 1;
}

message Text {
  string string = 1;
  bool bold = 2;
  bool underline = 3;

  string link_key = 4;
}
